[metadata]
name = tpm2-pytss
author = William Roberts
author_email = william.c.roberts@intel.com
license = BSD
description = TPM 2.0 TSS Bindings for Python
url = https://github.com/tpm2-software/tpm2-pytss
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    tpm2_pytss
    tpm2_pytss/internal
setup_requires =
    setuptools_scm[toml]>=3.4.3
    cffi>=1.0.0
    pkgconfig
    cryptography>=3.0
    asn1crypto
install_requires =
    cffi>=1.0.0
    asn1crypto
    cryptography>=3.0

[options.extras_require]
dev =
    docutils==0.16
    coverage
    codecov
    sphinx
    sphinx-rtd-theme
    twine
    setuptools_scm[toml]>=3.4.3
    black==19.10b0
    pytest
    pytest-xdist
    pytest-cov
    myst-parser
