[metadata]
name = tpm2-pytss
author = William Roberts
author_email = william.c.roberts@intel.com
license = BSD
description = TPM 2.0 TSS Bindings for Python
url = https://github.com/tpm2-software/tpm2-pytss
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
package_dir=
    =src
packages=
    tpm2_pytss
    tpm2_pytss.internal
setup_requires =
    setuptools_scm[toml]>=3.4.3
    cffi>=1.0.0
    pkgconfig
    cryptography>=43.0.0
    asn1crypto
    packaging
    pycparser
install_requires =
    cffi>=1.0.0
    asn1crypto
    cryptography>=43.0.0
    packaging


[options.extras_require]
dev =
    docutils==0.16
    coverage
    sphinx
    sphinx-rtd-theme
    twine
    setuptools_scm[toml]>=3.4.3
    black~=24.0
    pytest
    pytest-xdist
    pytest-cov
    myst-parser
    build
    installer
    ruff
